<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/call_help_item"
        android:title="callhelp"
        android:orderInCategory="4"
        android:icon="@drawable/ic_contact_phone_white_32dp"
        appcompat:showAsAction="always" />

    <item
        android:id="@+id/photo_camera_item"
        android:title="camera"
        android:orderInCategory="5"
        android:icon="@drawable/ic_photo_camera_white_48dp"
        appcompat:showAsAction="always" />

    <item
        android:id="@+id/text_message_item"
        android:title="message"
        android:orderInCategory="6"
        android:icon="@drawable/ic_textsms_white_32dp"
        appcompat:showAsAction="always" />
    <item
       android:id="@+id/action_add"
       android:enabled="true"
       android:icon="@drawable/ic_add_circular"
       android:title="@string/str_menu"
        android:orderInCategory="11"
      appcompat:showAsAction="always"/>
    <item
        android:id="@+id/action_refresh"
        android:title="@string/str_refresh"
        android:orderInCategory="7"
        android:icon="@drawable/ic_action_refresh_button"
        appcompat:showAsAction="always" />

    <item
        android:id="@+id/menu_item_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/str_save"
        android:orderInCategory="8"
        appcompat:showAsAction="always"/>
    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/str_delete"
        android:orderInCategory="9"
        appcompat:showAsAction="always"/>

    <item
        android:id="@+id/action_cart"
        android:title="@string/str_cart"
        android:orderInCategory="10"
        android:icon="@drawable/ic_action_shopping_cart"
        appcompat:showAsAction="always" />

</menu>