<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back"
    android:padding="10dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/countrycode_imageview"
            android:src="@drawable/ic_action_phone_call"
            android:background="@drawable/edt_bg"
            android:layout_marginRight="2dp"
            android:drawableLeft="@drawable/ic_action_phone_call"
            android:text="@string/country_code"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textAllCaps="false"
            />
        <EditText
            android:id="@+id/edt_mb_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@drawable/edt_bg"
            android:hint="@string/str_mb_no"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            />

    </LinearLayout>


    <Spinner
        android:id="@+id/usertype_registration_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="20"
        android:spinnerMode="dialog"
        android:textStyle="italic"
        android:textColorHint="#fafafa"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/edt_bg"
        android:visibility="visible"
        >
    </Spinner>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/str_submit"
        android:textColor="#FFF" />

<TextView
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/cancel"
    android:layout_marginTop="@dimen/_10ssp"
    android:text="@string/str_cancel"
    android:textSize="@dimen/_12ssp"
    android:textColor="@color/background"
    android:layout_height="wrap_content" />

</LinearLayout>