<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/common_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_med_name"/>

            <EditText
                android:id="@+id/edt_medicine_name"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="2.0"
                android:layout_marginStart="10dp"
                android:maxLines="4"
                android:hint="@string/str_name"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_day"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Spinner
                    android:id="@+id/spn_day_from"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/str_to"/>

                <Spinner
                    android:id="@+id/spn_day_to"
                    android:layout_width="80dp"
                    android:layout_height="40dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_time"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textColor="#FFF"
                    android:textSize="13sp"
                    android:background="@color/colorAccent"
                    android:textColorHint="#FFF"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:hint="@string/str_sel_time"/>

            </LinearLayout>

            <!--<LinearLayout
                android:id="@+id/lin_time_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:orientation="vertical">


            </LinearLayout>-->


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:background="@drawable/ic_add_circular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="13sp"
                android:text="Add More"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_alarm"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.0"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_alarm"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/toggle_off"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3.0"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/str_description"/>

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2.0"
                android:inputType="text"
                android:maxLines="4"
                android:hint="@string/str_description"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/str_save"/>

    </LinearLayout>

</RelativeLayout>
